# libxls

./: .cproject  .cvsignore  .gitignore  .travis.yml  AUTHORS  COPYING.LESSER  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  appveyor.yml  autogen.sh  bootstrap  compile  config.h.in  configure  configure.ac  configure.in  libtool  libxls.pc.in  test-driver
.github/workflows/: build.yml  fuzz.yml
.travis/: bootstrap.sh
config/: config.h
cplusplus/: Makefile  XlsReader.cpp  XlsReader.h  main  main.cpp
doc/homepage/: index.html
formulas/: xlsformula.c  xlsformula.h
fuzz/: fuzz_xls.c
fuzz/corpus/: xls2csv_ole_ole2_fread_327.xls  xls2csv_ole_read_MSAT_772.xls  xls2csv_ole_read_MSAT_body_637.xls  xls2csv_ole_read_MSAT_body_687.xls
include/: Makefile.am  Makefile.in  xls.h
include/libxls/: Makefile.am  Makefile.in  brdb.c.h  brdb.h  endian.h  locale.h  ole.h  xls.h  xlsstruct.h  xlstool.h  xlstypes.h
man/: xls2csv.man
phpext/xls/: deferphpize  php_xls.h  xls.c  xls.dsp
phpext/xls/tests/: xls2.php
src/: .cvsignore  Makefile.am  Makefile.in  endian.c  libxls.dsp  locale.c  ole.c  version.c  xls.c  xls2csv.c  xlstool.c
test/: Makefile.am  Makefile.in  test.c  test.dsp  test2.c  xls2csv.c
test/files/: test2.xls
trunk/libxls/: .cproject  .cvsignore  INSTALL  Makefile.am  Makefile.in  TODO  aclocal.m4  bootstrap  buildconf  config.h.in  configure  configure.in  libtool  ltmain.sh  mkinstalldirs
trunk/libxls/config/: depcomp
trunk/libxls/cplusplus/: XlsReader.cpp  XlsReader.h  main.cpp
trunk/libxls/doc/homepage/: index.html  stylesheet.css
trunk/libxls/formulas/: xlsformula.c  xlsformula.h
trunk/libxls/include/: Makefile.am  Makefile.in
trunk/libxls/include/libxls/: Makefile.am  Makefile.in  brdb.c.h  brdb.h  endian.h  ole.h  xls.h  xlsstruct.h  xlstool.h  xlstypes.h
trunk/libxls/phpext/xls/: CREDITS  cleanup  config.m4  xls.c
trunk/libxls/phpext/xls/tests/: 001.phpt  test2.xls  xls.php
trunk/libxls/src/: .cvsignore  Makefile.am  Makefile.in  endian.c  ole.c  version.c  xls.c  xls2csv.c  xlstool.c
trunk/libxls/test/: .cvsignore  Makefile.am  Makefile.in  test.c  test2.c
trunk/libxls/test/files/: test2.xls
