AC_INIT([test/test.c])
PACKAGE=libxls

LIBXLS_MAJOR_VERSION=1
LIBXLS_MINOR_VERSION=0
LIBXLS_MICRO_VERSION=0

VERSION=$LIBXLS_MAJOR_VERSION.$LIBXLS_MINOR_VERSION.$LIBXLS_MICRO_VERSION
MAJOR_VERSION_PLUS_MINOR_VERSION=1
VERSION_INFO=$MAJOR_VERSION_PLUS_MINOR_VERSION:$LIBXLS_MICRO_VERSION:$LIBXLS_MINOR_VERSION

AC_SUBST(VERSION_INFO)
AC_SUBST(LIBXLS_MAJOR_VERSION)
AC_SUBST(LIBXLS_MINOR_VERSION)
AC_SUBST(LIBXLS_MICRO_VERSION)

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr/local/libxls)
AC_PROG_INSTALL

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)


AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

AC_PROG_INSTALL	        
AC_OUTPUT(Makefile include/Makefile include/libxls/Makefile src/Makefile test/Makefile)