INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir) -I/usr/include/ -I/usr/local/include -I../include


noinst_PROGRAMS = test
#main_SOURCES=test.c
test_LDADD = $(top_builddir)/src/libxls.la @LIBS@ -L$(top_builddir)/src -lxls -liconv

#bin_PROGRAMS = main
#main_SOURCES=main.c
#main_LDADD = @LIBS@ $(GLIB_LIBS) -lgnomeole2 -L$(top_srcdir)/src -lxls
test_LDFLAGS = 
AM_CFLAGS = 
AM_CXXFLAGS = 
AM_FFLAGS = 
SUBDIRS = 
