AC_INIT([test/test.c])
PACKAGE=libxls

LIBXLS_MAJOR_VERSION=1
LIBXLS_MINOR_VERSION=0
LIBXLS_MICRO_VERSION=0

VERSION=$LIBXLS_MAJOR_VERSION.$LIBXLS_MINOR_VERSION.$LIBXLS_MICRO_VERSION
MAJOR_VERSION_PLUS_MINOR_VERSION=1
VERSION_INFO=$MAJOR_VERSION_PLUS_MINOR_VERSION:$LIBXLS_MICRO_VERSION:$LIBXLS_MINOR_VERSION

AC_SUBST(VERSION_INFO)
AC_SUBST(LIBXLS_MAJOR_VERSION)
AC_SUBST(LIBXLS_MINOR_VERSION)
AC_SUBST(LIBXLS_MICRO_VERSION)

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr/local/libxls)
AC_PROG_INSTALL

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)


AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

AC_PROG_INSTALL	        

WITH_ICONV=1
AC_ARG_WITH(iconv,
[  --with-iconv[[=DIR]]      add ICONV support (on)])

if test "$with_iconv" != "yes" -a "$with_iconv" != "" ; then
    CPPFLAGS="${CPPFLAGS} -I$with_iconv/include"
    XML_INCLUDEDIR="${XML_INCLUDEDIR} -I$with_iconv/include"
    ICONV_LIBS="-L$with_iconv/lib"
else 
    CPPFLAGS="${CPPFLAGS} -I/usr/local/include"
    XML_INCLUDEDIR="${XML_INCLUDEDIR} -I/usr/local/include"
    ICONV_LIBS="-L/usr/local/lib"
fi

    AC_CHECK_HEADER(iconv.h,
	AC_MSG_CHECKING(for iconv)
	AC_TRY_LINK([#include <stdlib.h>
#include <iconv.h>],[
iconv_t cd = iconv_open ("","");
iconv (cd, NULL, NULL, NULL, NULL);],[
	    AC_MSG_RESULT(yes)
	    WITH_ICONV=1],[
	    AC_MSG_RESULT(no)
	    AC_MSG_CHECKING(for iconv in -liconv)

	    _ldflags="${LDFLAGS}"
	    _libs="${LIBS}"
	    LDFLAGS="${LDFLAGS} ${ICONV_LIBS}"
	    LIBS="${LIBS} -liconv"

	    AC_TRY_LINK([#include <stdlib.h>
#include <iconv.h>],[
iconv_t cd = iconv_open ("","");
iconv (cd, NULL, NULL, NULL, NULL);],[
		AC_MSG_RESULT(yes)
		WITH_ICONV=1
		ICONV_LIBS="${ICONV_LIBS} -liconv"
		LIBS="${_libs}"
		LDFLAGS="${_ldflags}"],[
		AC_MSG_RESULT(no)
		LIBS="${_libs}"
		LDFLAGS="${_ldflags}"])]))

AC_SUBST(WITH_ICONV)

LIBXLS_LIBS="-lxls $ICONV_LIBS $LIBS"

AC_SUBST(LIBXLS_LIBS)

AC_OUTPUT(Makefile include/Makefile include/libxls/Makefile src/Makefile test/Makefile)