## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

includedir = $(prefix)/include

include_HEADERS =			\
libxls/xls.h

nobase_include_HEADERS =	\
libxls/brdb.c.h				\
libxls/brdb.h				\
libxls/endian.h				\
libxls/ole.h				\
libxls/xlsstruct.h			\
libxls/xlstypes.h			\
libxls/xlstool.h
